# noclip.website

./: .env  .gitignore  .htaccess  .parcelrc  .terserrc  .travis.yml  LICENSE  README.md  TODO.md  bmd.js  build.js  embed.html  index.html  level1  lz77.js  nitro_gx.js  nitro_gx.ts  nitro_tex.js  package-lock.json  package.json  pnpm-lock.yaml  render.js  render.ts  rsbuild.config.ts  rspack.config.ts  run noclip.bat  setup.md  tsconfig.json  tsconfig.strictNullChecks.json  tslint.json  webpack.common.cjs  webpack.common.js  webpack.dev.cjs  webpack.dev.js  webpack.prod.cjs  webpack.prod.js
.circleci/: config.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: tech_support.md
.github/workflows/: build.yml
data/: .gitignore
data/dkcr/: .gitignore
data/elb/: stg01_01_disp01.brres  stg01_02_disp01.brres  stg01_03_disp01.brres  stg01_04_disp01.brres  stg01_05_disp01.brres  stg01_06_disp01.brres  stg01_07_disp01.brres  stg01_08_disp01.brres  stg01_09_disp01.brres  stg01_10_disp01.brres  stg01_11_disp01.brres  stg01_12_disp01.brres  stg01_13_disp01.brres  stg01_14_disp01.brres  stg01_15_disp01.brres  stg01_16_disp01.brres  stg01_17_disp01.brres  stg01_18_disp01.brres  stg02_05_disp01.brres  stg02_06_disp01.brres  stg04_01_disp01.brres  stg04_02_disp01.brres
data/j3d/: MarioFaceShipPlanet.arc  PeachCastleGardenPlanet.arc  PeachCastleGardenPlanetBloom.arc  Room11.arc  delfino0.szs  dolpic.bmd  dolpic0.szs  faceship.bmd  monte3.szs  noki.bmd  outset.bdl  peachcastlegardenplanet.bdl  ricco.bmd  ricco0.szs  sirena.bmd  windfall.bdl
deploy/: deploy_rsa.enc
exk/: battan_king_map_all.bmd  bombhei_map_all.bmd  castle_1f_all.bmd  castle_2f_all.bmd  ex_l_map_all.bmd  ex_w_map_all.bmd  ex_wario_all.bmd  high_mt_all.bmd  high_slider_all.bmd  koopa1_map_all.bmd  koopa3_boss_all.bmd  metal_switch_all.bmd  rainbow_cruise_all.bmd  snow_slider_all.bmd  suisou_all.bmd  teresa_house_all.bmd  test_map_b_all.bmd  tibi_deka_d_all.bmd  water_city_all.bmd
public/: .htaccess
rust/: .gitignore  Cargo.toml
rust/.cargo/: config.toml
rust/noclip-macros/: Cargo.toml
rust/noclip-macros/src/: lib.rs
rust/src/: bcn_texture.rs  compression.rs  deku_common.rs  font.rs  geometry.rs  glsl_compile.rs  gx_texture.rs  halo.rs  lib.rs  sgi_texture.rs  spline.rs  tegra_texture.rs  util.rs  yaz0.rs
rust/src/crazytaxi/: archive.rs  mod.rs  shp.rs  tex.rs  util.rs
rust/src/halo/: bitmap.rs  bitmap_utils.rs  common.rs  map.rs  mod.rs  model.rs  scenario.rs  shader.rs  tag.rs  util.rs  wasm.rs
rust/src/pmtok/: mod.rs
rust/src/unity/: asset.rs  asset_file.rs  bitstream.rs  class_id.rs  common.rs  game_object.rs  material.rs  mesh.rs  mod.rs  reader.rs  serialized_file.rs  texture2d.rs  util.rs  version.rs
rust/src/unity/types/: binary.rs  class_id.rs  common.rs  mod.rs  object.rs  serialized_file.rs  v2019_4_39f1.rs  v2020_3_16f1.rs  v2021_3_27f1.rs  wasm.rs
rust/src/wow/: adt.rs  animation.rs  blp.rs  common.rs  db.rs  m2.rs  mod.rs  particles.rs  sheep.rs  skin.rs  wdt.rs  wmo.rs
rust/test_data/unity_assets/scene/: level1.resS
rust/test_data/unity_assets/v20/: sharedassets0.assets.resS
rust/test_data/unity_assets/v22/: compressed_mesh.assets  sharedassets0.assets  sharedassets0.assets.resS
rust/tools/cargo-bin/: Cargo.toml
src/: AnimationController.ts  ArrayBufferSlice.ts  Ascii85.ts  BitMap.ts  BufferCoalescer.ts  BuildVersion.ts  Camera.ts  CameraAnimationManager.ts  CaptureHelpers.ts  CodeEditor.ts  Color.ts  DataFetcher.ts  DataShare.ts  DebugFloaters.ts  DebugJunk.ts  DefaultSaveStates.json  DefaultSaveStates.nclsp  DownloadUtils.ts  FakeTextDecoder.ts  FileDrops.ts  Geometry.ts  GrabManager.ts  HashMap.ts  InputManager.ts  MathHelpers.ts  MatrixHelpers.ts  MemoizeCache.ts  Program.ts  Progressable.ts  RenderArena.ts  RenderStatistics.ts  RenderUtility.ts  RustWasm2.cjs  SaveManager.ts  SaveState.ts  SceneBase.ts  Scenes_FileDrops.ts  Scenes_Test.ts  Screenshot.ts  Spline.ts  (+36 more)
(+4097 files in other folders)
